--- a/pages/home.html
+++ b/pages/home.html
@@ -9,6 +9,14 @@
 
     <body>
 
+        <div class="menu">
+
+            <a href="#home">home</a>
+            <a href="about.html">about</a>
+            <a href="projects.html">projects</a>
+            <a href="contact.html">contact</a>
+
+        </div>
 
     </body>
 
