--- a/pages/home.html
+++ b/pages/home.html
@@ -11,10 +11,34 @@
 
         <div class="menu">
 
-            <a href="#home">home</a>
+            <a href="home.html">home</a>
             <a href="about.html">about</a>
+            <a href="home.html">
+                <img alt="Logo" src="../assets/logo.png">
+            </a>
             <a href="projects.html">projects</a>
             <a href="contact.html">contact</a>
+
+        </div>
+
+        <div class="intro">
+
+            <h1>Hello, I’m Anna. 👋</h1>
+
+            <p>
+                I’m a certified Scum Master, Product Owner, and fullstack engineer looking to deep dive into UX.
+                UX is a wide reaching field I enjoy being a part of.
+            </p>
+
+            <button>View Work</button>
+
+        </div>
+
+        <div class="decoration">
+
+            <img class="vector-1" src="../assets/Vector%201.png">
+            <img class="vector-2" src="../assets/Vector%202.png">
+            <img class="vector-3" src="../assets/Vector%203.png">
 
         </div>
 
