--- a/pages/projects.html
+++ b/pages/projects.html
@@ -11,8 +11,11 @@
 
         <div class="menu">
 
-            <a href="#home">home</a>
+            <a href="home.html">home</a>
             <a href="about.html">about</a>
+            <a href="home.html">
+                <img alt="Logo" src="../assets/logo.png">
+            </a>
             <a href="projects.html">projects</a>
             <a href="contact.html">contact</a>
 
