finishing up desktop layout

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,10 @@
     <head>
 
         <title>Anna St Germain</title>
+        <link rel="stylesheet" href="styles/about.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+        </style>
 
     </head>
 
@@ -12,12 +16,43 @@
         <div class="menu">
 
             <a href="home.html">home</a>
-            <a href="about.html">about</a>
+            <a class="bar">|</a>
+            <a class="selected" href="about.html">about</a>
             <a href="home.html">
-                <img alt="Logo" src="../assets/logo.png">
+                <img class="logo" alt="Logo" src="../assets/logo.png">
             </a>
             <a href="projects.html">projects</a>
+            <a class="bar">|</a>
             <a href="contact.html">contact</a>
+
+        </div>
+
+        <div class="intro">
+
+            <h1>About <div class="name">me</div>.</h1>
+
+            <p align="center">
+                I’m a 25 year old from London, Ontario, Canada. <br>
+                I worked as a fullstack engineer, now transitioning to UX and UI. <br>
+                <br>
+                I like creating interactive and enjoyable experiences.
+            </p>
+
+            <div class="buttons">
+
+                <a class="button" href="https://www.linkedin.com/in/anna-st-germain/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+
+                <a class="button" href="projects.html">Resume</a>
+
+            </div>
+
+        </div>
+
+        <div class="decoration">
+
+            <img class="vector-1" src="../assets/Vector%201.png">
+            <img class="vector-2" src="../assets/Vector%202.png">
+            <img class="vector-3" src="../assets/Vector%203.png">
 
         </div>
 
