--- a/pages/home.html
+++ b/pages/home.html
@@ -4,6 +4,10 @@
     <head>
 
         <title>Anna St Germain</title>
+        <link rel="stylesheet" href="styles/home.css">        <link rel="stylesheet" href="styles/home.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+        </style>
 
     </head>
 
@@ -11,26 +15,29 @@
 
         <div class="menu">
 
-            <a href="home.html">home</a>
+            <a class="selected" href="home.html">home</a>
+            <a class="bar">|</a>
             <a href="about.html">about</a>
             <a href="home.html">
-                <img alt="Logo" src="../assets/logo.png">
+                <img class="logo" alt="Logo" src="../assets/logo.png">
             </a>
             <a href="projects.html">projects</a>
+            <a class="bar">|</a>
             <a href="contact.html">contact</a>
 
         </div>
 
         <div class="intro">
 
-            <h1>Hello, I’m Anna. 👋</h1>
+            <h1>Hello, I’m <div class="name">Anna</div>. 👋</h1>
 
-            <p>
-                I’m a certified Scum Master, Product Owner, and fullstack engineer looking to deep dive into UX.
+            <p align="center">
+                I’m a certified Scum Master, Product Owner, <br>
+                and fullstack engineer looking to deep dive into UX. <br>
                 UX is a wide reaching field I enjoy being a part of.
             </p>
 
-            <button>View Work</button>
+            <a class="button" href="projects.html">View Work</a>
 
         </div>
 
