--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,10 @@
     <head>
 
         <title>Anna St Germain</title>
+        <link rel="stylesheet" href="styles/contact.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+        </style>
 
     </head>
 
@@ -12,12 +16,30 @@
         <div class="menu">
 
             <a href="home.html">home</a>
+            <a class="bar">|</a>
             <a href="about.html">about</a>
             <a href="home.html">
-                <img alt="Logo" src="../assets/logo.png">
+                <img class="logo" alt="Logo" src="../assets/logo.png">
             </a>
             <a href="projects.html">projects</a>
-            <a href="contact.html">contact</a>
+            <a class="bar">|</a>
+            <a class="selected" href="contact.html">contact</a>
+
+        </div>
+
+        <div class="intro">
+
+            <h1>Contact <div class="name">me</div>.</h1>
+
+            <a class="button" href="mailto:anna@annastgermain.com">anna@annastgermain@gmail.com</a>
+
+        </div>
+
+        <div class="decoration">
+
+            <img class="vector-1" src="../assets/Vector%201.png">
+            <img class="vector-2" src="../assets/Vector%202.png">
+            <img class="vector-3" src="../assets/Vector%203.png">
 
         </div>
 
